<resources>
    <string name="app_name">MFU Reg</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>


    <string name="title_activity_scrolling">Welcome, 6131305032@lamduan.mfu.ac.th</string>


    <string name="action_settings">Settings</string>
    <string name="recent_news">Da Nang International Fireworks Festival 2017</string>
    <string name="in_news">Da Nang International Fireworks Festival 2017Update: Dec 08, 2016 (TITC) - Da Nang International Fireworks Festival 2017 (DIFF 2017) with the theme “Shining Marble Mountains” will take place for two months, from 29 April to 24 June 2017 with the aim to Da Nang become a unique cultural festival tourism space. </string>
    <string name="publish_date">2017-04-30 12:13:14</string>

    <!-- Strings related to Main Menu -->

    <string name="menuitem1">Enrollment</string>
    <string name="menuitem2">Timetable</string>
    <string name="menuitem3">Student Bio</string>
    <string name="menuitem4">Student Activity</string>
    <string name="menuitem5">Scholarships</string>
    <string name="menuitem6">Grade Results</string>

</resources>
