<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ScrollingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/button8"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_directions" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_preferences" />

        <Button
            android:id="@+id/button10"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_set_as" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:cropToPadding="false"
            android:src="@android:drawable/ic_dialog_alert"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="0dp"
            app:fabCustomSize="30dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="You have 10 Unread notifications" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/bEnroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:addStatesFromChildren="false"
                android:animateLayoutChanges="false"
                android:background="@drawable/border"
                android:clickable="true"
                android:fadingEdge="horizontal"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@android:drawable/ic_menu_my_calendar" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/menuitem1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bTimetable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:clickable="true"
                android:fadingEdge="horizontal"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_clock" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/menuitem2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bStudentActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/menuitem4"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bScholarships"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animationCache="false"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/menuitem5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bGrades"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@android:drawable/checkbox_on_background" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/menuitem6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@android:drawable/btn_star" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/menuitem3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>